# Prism

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .markdownlint.json  .prettierrc  CHANGELOG.md  CONTAINER_VIRTUALIZATION_DESIGN.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCS_INDEX.md  Dockerfile  IMPLEMENTATION_READINESS_REPORT.md  INDIVIDUAL_PROFESSIONAL_INDUSTRIAL_CAPABILITY_STRATEGY.md  INVESTOR_APPENDIX_PARITY.md  LICENSE  LICENSE-COMMERCIAL.md  NOTICE  PHASE_D2_RELEASE_PACKET_TEMPLATE.md  PHASE_EXECUTION_PLAN.md  PRISM_GAP_ANALYSIS.md  PRISM_PRD.md  PRISM_RESEARCH_DOCUMENTATION.md  PRODUCTION_RELEASE_RUNBOOK.md  Permanent_Active_Directives.txt  Prism_Extreme_Test_Deep_Research_Prompt.md  README.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  ROADMAP.md  SECURITY.md  TERMINAL_VIRTUALIZATION_DESIGN.md  TEST_STRATEGY.md  TOOL_CONTRACT_EXTRACTION_SPEC.md  USER_GUIDE.md  audit.md  baton-pass.html  baton-pass.md  docker-compose.yml  ecosystem.config.js  (+25 more)
.github/: CODEOWNERS  PRISM_SACRED_COVENANT.md
.mcp/: fix_headers.py  goliath_swarm_memory.json  mcp-settings.json  nexus-mcp-settings.json  package.json  test_ecosystem_grading_v2.py
characters/: README.md  aria-business.json  aria-individual.json  example-analyst.json  phoenix-business.json  phoenix-individual.json  sentinel-business.json  sentinel-individual.json
config/: plugin-signing-keys.json  release-signing-keys.json
docs/: DOCS_INDEX.md  (+138 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/prism_client/: __init__.py  client.py  errors.py
sdk/python/tests/: test_client.py
(+974 files in other folders)
